--- a/app/design/frontend/base/default/template/catalog/product/view/options/type/date.phtml
+++ b/app/design/frontend/base/default/template/catalog/product/view/options/type/date.phtml
@@ -20,18 +20,9 @@ $optionId = $option->getId();
 <dd>
 <?php if ($option->getType() == Mage_Catalog_Model_Product_Option::OPTION_TYPE_DATE_TIME || $option->getType() == Mage_Catalog_Model_Product_Option::OPTION_TYPE_DATE): ?>
     <?= $this->getDateHtml() ?>
-
-    <?php if (!$this->useCalendar()): ?>
-    <script type="module">
-        const dateOption = productConfigure.opConfig.dateOption;
-        const reloadMonth = dateOption.reloadMonth.bind(dateOption);
-        document.getElementById('options_<?= $optionId ?>_month').addEventListener('change', reloadMonth);
-        document.getElementById('options_<?= $optionId ?>_year').addEventListener('change', reloadMonth);
-    </script>
-    <?php endif ?>
 <?php endif ?>
 
-<?php if ($option->getType() == Mage_Catalog_Model_Product_Option::OPTION_TYPE_DATE_TIME || $option->getType() == Mage_Catalog_Model_Product_Option::OPTION_TYPE_TIME): ?>
+<?php if ($option->getType() == Mage_Catalog_Model_Product_Option::OPTION_TYPE_TIME): ?>
     <span class="time-picker"><?= $this->getTimeHtml() ?></span>
 <?php endif ?>
 
