--- a/app/design/adminhtml/default/default/template/sales/order/pdf/shipment/packaging.phtml
+++ b/app/design/adminhtml/default/default/template/sales/order/pdf/shipment/packaging.phtml
@@ -17,7 +17,7 @@ $packages = $this->getPackages();
     <!-- Header -->
     <div class="pdf-header">
         <?php if ($this->getLogoUrl()): ?>
-            <img src="<?= $this->getLogoUrl() ?>" alt="Logo" class="pdf-logo" />
+            <img src="<?= $this->getLogoUrl() ?>" class="pdf-logo" />
         <?php endif; ?>
 
         <div class="document-info">
