--- a/app/design/adminhtml/default/default/template/sales/order/pdf/invoice/default.phtml
+++ b/app/design/adminhtml/default/default/template/sales/order/pdf/invoice/default.phtml
@@ -12,11 +12,11 @@ $invoice = $this->getInvoice();
 $order = $this->getOrder();
 ?>
 
-<div class="pdf-page"><?php echo $this->getLogoUrl() ?>
+<div class="pdf-page">
     <!-- Logo -->
     <?php if ($logoUrl = $this->getLogoUrl()): ?>
-    <div class="pdf-logo" style="border: 2px solid red">
-        <img src="<?php echo $logoUrl ?>" alt="<?php echo $this->escapeHtml($this->getStore()->getName()) ?>" style="max-height: 50pt;" />
+    <div class="pdf-logo">
+        <img src="<?php echo $logoUrl ?>" />
     </div>
     <?php endif; ?>
 
