--- a/app/design/adminhtml/default/default/template/sales/order/pdf/invoice/default.phtml
+++ b/app/design/adminhtml/default/default/template/sales/order/pdf/invoice/default.phtml
@@ -16,26 +16,26 @@ $order = $this->getOrder();
     <!-- Logo -->
     <?php if ($logoUrl = $this->getLogoUrl()): ?>
     <div class="pdf-logo">
-        <img src="<?php echo $logoUrl ?>" />
+        <img src="<?= $logoUrl ?>" />
     </div>
     <?php endif; ?>
 
     <!-- Document Header -->
     <div class="pdf-document-header">
         <div class="pdf-document-info">
-            <h1><?php echo $this->__('Invoice # %s', $this->getInvoiceNumber()) ?></h1>
+            <h1><?= $this->__('Invoice # %s', $this->getInvoiceNumber()) ?></h1>
             <?php if ($orderNumber = $this->getOrderNumber()): ?>
-                <?php echo $this->__('Order # %s', $orderNumber) ?><br />
+                <?= $this->__('Order # %s', $orderNumber) ?><br />
             <?php endif; ?>
-            <?php echo $this->__('Invoice Date: %s', $this->getInvoiceDate()) ?><br />
+            <?= $this->__('Invoice Date: %s', $this->getInvoiceDate()) ?><br />
             <?php if ($orderDate = $this->getOrderDate()): ?>
-                <?php echo $this->__('Order Date: %s', $orderDate) ?>
+                <?= $this->__('Order Date: %s', $orderDate) ?>
             <?php endif; ?>
         </div>
 
         <?php if ($storeAddress = $this->getStoreAddress()): ?>
         <div class="pdf-store-address">
-            <?php echo nl2br($this->escapeHtml($storeAddress)) ?>
+            <?= nl2br($this->escapeHtml($storeAddress)) ?>
         </div>
         <?php endif; ?>
     </div>
@@ -43,20 +43,20 @@ $order = $this->getOrder();
     <!-- Addresses -->
     <div class="pdf-addresses">
         <div class="pdf-address-billing">
-            <h3><?php echo $this->__('Sold to:') ?></h3>
+            <h3><?= $this->__('Sold to:') ?></h3>
             <?php if ($billing = $this->getBillingAddress()): ?>
             <address>
-                <?php echo $billing->format('html') ?>
+                <?= $billing->format('html') ?>
             </address>
             <?php endif; ?>
         </div>
 
         <?php if (!$order->getIsVirtual()): ?>
         <div class="pdf-address-shipping">
-            <h3><?php echo $this->__('Ship to:') ?></h3>
+            <h3><?= $this->__('Ship to:') ?></h3>
             <?php if ($shipping = $this->getShippingAddress()): ?>
             <address>
-                <?php echo $shipping->format('html') ?>
+                <?= $shipping->format('html') ?>
             </address>
             <?php endif; ?>
         </div>
@@ -66,8 +66,8 @@ $order = $this->getOrder();
     <!-- Payment Method -->
     <?php if ($paymentInfo = $this->getPaymentInfo()): ?>
     <div class="pdf-payment-info">
-        <h3><?php echo $this->__('Payment Method') ?></h3>
-        <div><?php echo $paymentInfo ?></div>
+        <h3><?= $this->__('Payment Method') ?></h3>
+        <div><?= $paymentInfo ?></div>
     </div>
     <?php endif; ?>
 
@@ -76,18 +76,18 @@ $order = $this->getOrder();
         <table class="pdf-items-table">
             <thead>
                 <tr class="pdf-table-header">
-                    <th class="col-products"><?php echo $this->__('Products') ?></th>
-                    <th class="col-sku"><?php echo $this->__('SKU') ?></th>
-                    <th class="col-price"><?php echo $this->__('Price') ?></th>
-                    <th class="col-qty"><?php echo $this->__('Qty') ?></th>
-                    <th class="col-tax"><?php echo $this->__('Tax') ?></th>
-                    <th class="col-subtotal"><?php echo $this->__('Subtotal') ?></th>
+                    <th class="col-products"><?= $this->__('Products') ?></th>
+                    <th class="col-sku"><?= $this->__('SKU') ?></th>
+                    <th class="col-price"><?= $this->__('Price') ?></th>
+                    <th class="col-qty"><?= $this->__('Qty') ?></th>
+                    <th class="col-tax"><?= $this->__('Tax') ?></th>
+                    <th class="col-subtotal"><?= $this->__('Subtotal') ?></th>
                 </tr>
             </thead>
             <tbody>
                 <?php foreach ($this->getItems() as $item): ?>
                 <tr class="pdf-item-row">
-                    <?php echo $this->getItemHtml($item) ?>
+                    <?= $this->getItemHtml($item) ?>
                 </tr>
                 <?php endforeach; ?>
             </tbody>
@@ -99,8 +99,8 @@ $order = $this->getOrder();
         <table>
             <?php foreach ($this->getTotals() as $total): ?>
             <tr<?php if (isset($total['strong']) && $total['strong']): ?> class="pdf-grand-total"<?php endif; ?>>
-                <td><?php echo $this->escapeHtml($total['label']) ?></td>
-                <td class="text-right"><?php echo $total['value'] ?></td>
+                <td><?= $this->escapeHtml($total['label']) ?></td>
+                <td class="text-right"><?= $total['value'] ?></td>
             </tr>
             <?php endforeach; ?>
         </table>
