--- a/app/design/frontend/base/default/template/customer/address/book.phtml
+++ b/app/design/frontend/base/default/template/customer/address/book.phtml
@@ -9,11 +9,7 @@
  * @license     https://opensource.org/licenses/afl-3.0.php  Academic Free License (AFL 3.0)
  */
 
-/**
- * Template for Mage_Customer_Block_Address_Book block
- *
- * @var Mage_Customer_Block_Address_Book $this
- */
+/** @var Mage_Customer_Block_Address_Book $this */
 ?>
 <div class="page-title title-buttons">
     <h1><?= $this->__('Address Book') ?></h1>
@@ -74,9 +70,6 @@
         <?php endif ?>
         </ol>
     </div>
-</div>
-<div class="buttons-set">
-    <p class="back-link"><a href="<?= $this->escapeUrl($this->getBackUrl()) ?>"><small>&laquo; </small><?= $this->__('Back') ?></a></p>
 </div>
 <script type="text/javascript">
     function deleteAddress(addressId) {
